# sofie

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  TODO.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: config.py  db.py  main.py  models.py  schemas.py
backend/agents/: base.py  celeste.py  dana.py  marcus.py  priya.py  ray.py  sofie.py
backend/chat/: memory.py  sofie_persona.py  websocket.py
backend/pipeline/: brand_memory.py  brief_parser.py  cli.py  compliance_checker.py  compositor.py  cost_tracker.py  image_generator.py  orchestrator.py  prompt_engineer.py
backend/queue/: __init__.py  tasks.py
backend/utils/: asset_fetcher.py  comfyui_client.py  compositor.py  fallback.py  file_server.py  font_recommender.py  image_gen_client.py  llm_client.py  pdf_brand_extractor.py  pexels_client.py  text_renderer.py
brands/example-brand/: brand.md  positioning.md
briefs/: brief-template.docx
dashboard/: operator.py
deploy/: auto-deploy.sh  nginx-sofie.conf
docs/: 01-project-plan.md  02-prd.md  03-tdd.md  04-design-brief.md  05-claude-md.md  AGENTS.md  ENV.md  FLOWS.md  PRD.md  TDD.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BrandSelector.jsx  ChatWindow.jsx  (+5 more)
scripts/: prod_e2e_smoke.py
tests/: test_agents.py  test_api.py  test_asset_fetcher.py  test_brief.docx  test_brief_parser.py  test_compositor.py  test_cost_tracker.py  test_image_gen_client.py  test_llm_client.py  test_models.py  test_pexels_client.py  test_qa.py
(+1 files in other folders)
